--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -80,7 +80,7 @@
             <div class="h-body text-center">
               <div class="btn btn-default btn-topmargin btn-verify btn-checksum" >
                 ${_('For Atomic Host images')}
-                
+
                 <div>
                   <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM" style="display:inline;">${_('x86_64')}</a> |
                   <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/aarch64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-aarch64-CHECKSUM" style="display:inline;">${_('aarch64')}</a> |
@@ -109,7 +109,7 @@
             <pre class="command">$ sha256sum -c *-CHECKSUM</pre>
             <p>${Markup(_('If the output states that the file is valid, then it\'s ready to use!'))}</p>
 	    <h3 class="top-margin">${_('How do I verify my downloaded image on another operating system?')}</h3>
-	    <p><a href="//docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to verify your image.')}</a></p>
+	    <p><a href="https://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation/#sect-verifying-images">${_('Read these instructions to verify your image.')}</a></p>
         </div>
     </div>
   </div>
