Remove reference to docker

--- a/labs.fedoraproject.org/data/content/scientific/download/index.html
+++ b/labs.fedoraproject.org/data/content/scientific/download/index.html
@@ -26,7 +26,7 @@
 <div class="container download-container top-space">
   <div class="row">
     <div class="col-md-8 text-left bottom-space">
-      <p>${Markup(_('The Scientific lab comes in two variants. A Live Image with KDE, that can be downloaded on the top of this page and Vagrant box for headless environments. Learn more about &lt;a href="%s"&gt;Docker&lt;/a&gt; and &lt;a href="%s"&gt;Vagrant&lt;/a&gt; in their documentation.') % ('https://docs.docker.com/get-started/', 'https://www.vagrantup.com/intro/getting-started/'))}</p>
+      <p>${Markup(_('The Scientific lab comes in two variants. A Live Image with KDE, that can be downloaded on the top of this page and Vagrant box for headless environments. Learn more about &lt;a href="%s"&gt;Vagrant&lt;/a&gt; in their documentation.') % ('https://www.vagrantup.com/intro/getting-started/'))}</p>
       <h3>${_('Running the Vagrant box')}</h3>
       <p>${_('First, download the box from the right side of this page.')}</p>
       <p>${_('For libvirt:')}</p>
