fix: download fedora doc links on labs

--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -346,7 +346,7 @@
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Downloading')}</h2>
 	      <p class="text-justify">${_('You can download these tools as complete Fedora image, or you can install them using a software manager on an existing Fedora installation.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora.html#chap-downloading-fedora" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Installing')}</h2>
@@ -377,7 +377,7 @@
   	</div>
   	<div class="row bottom-space hidden-xs">
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora.html#chap-downloading-fedora" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora/" role="button">${_('Learn more')}</a></p>
   	  </div>
       <div class="col-sm-4 text-center">
         <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/install/Installing_Using_Anaconda.html" role="button">${_('Learn more')}</a></p>
