--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -284,7 +284,7 @@
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Downloading')}</h2>
 	      <p class="text-justify">${_('Spin downloads are offered via direct download, but you can also get them via Bittorrent. In this case you will need to install a Bittorrent client in order to download a spin. If you cannot use Bittorrent, some spins offer alternative download methods.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora.html#chap-downloading-fedora" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Using')}</h2>
@@ -315,7 +315,7 @@
   	</div>
   	<div class="row bottom-space hidden-xs">
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora.html#chap-downloading-fedora" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/Downloading_Fedora/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-sm-4 text-center">
 	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-preparing-boot-media" role="button">${_('Learn more')}</a></p>
