--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -115,12 +115,12 @@
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Installing')}</h2>
 	      <p class="text-justify">${_('To install a lab, you run the lab on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation.html#sect-preparing-boot-media" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Using')}</h2>
 	      <p class="text-justify">${_('After installing either the software bundle or the complete Fedora version you can run these tools by launching the applications that correspond with them.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda.html" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	</div>
 
@@ -144,10 +144,10 @@
 	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/Downloading_Fedora/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda.html" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation.html#sect-preparing-boot-media" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	</div>
   </div>
