chore: Make all docs site linkts https

--- a/fedoraproject.org/data/content/e/404.html
+++ b/fedoraproject.org/data/content/e/404.html
@@ -34,7 +34,7 @@
                 <ul id="fourofour-resources">
                     <li class="resource-docs">
                         <h5 class="resource-docs">${Markup(_('Fedora Documentation'))}</h5>
-                        <a href="http://docs.fedoraproject.org/">http://docs.fedoraproject.org/</a>
+                        <a href="https://docs.fedoraproject.org/">https://docs.fedoraproject.org/</a>
                     </li>
                         <li class="resource-communicate">
                         <h5>${Markup(_('Connect with the Fedora Community'))}</h5>
@@ -50,4 +50,3 @@
         <div class="clear"></div>
 	</body>
 </html>
-
