--- a/spins.fedoraproject.org/data/content/cinnamon/download/index.html
+++ b/spins.fedoraproject.org/data/content/cinnamon/download/index.html
@@ -98,12 +98,12 @@
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Using')}</h2>
 	      <p class="text-justify">${_('Spins are provided as ISO files. You may use the ISO file to create a new virtual machine, or you can burn the ISO in a special way to a USB stick or optical media to run the spin on hardware.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation/" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="https://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Installing')}</h2>
 	      <p class="text-justify">${_('To install a spin, you run the spin on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda/" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="https://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	</div>
 
@@ -127,10 +127,10 @@
 	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/Downloading_Fedora.html#chap-downloading-fedora" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation/" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="https://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Preparing_for_Installation/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	  <div class="col-sm-4 text-center">
-	      <p><a class="btn btn-primary" href="http://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda/" role="button">${_('Learn more')}</a></p>
+	      <p><a class="btn btn-primary" href="https://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	</div>
   </div>
