fix: Update create iso/usb doc links

--- a/getfedora.org/data/content/server/index.html
+++ b/getfedora.org/data/content/server/index.html
@@ -185,8 +185,8 @@
           <div class="h-body text-justify">
             <ul>
               <li>First, <a class="download-splash" href="http://download.fedoraproject.org/pub/fedora/linux/releases/20/Live/x86_64/Fedora-Live-Desktop-x86_64-20-1.iso">download a Fedora ISO image</a>.</li>
-              <li>To install Fedora using a USB stick, <a href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Installation_Guide/Making_USB_Media.html">follow these instructions.</a></li>
-              <li>To install Fedora using a blank CD or DVD, <a href="http://docs.fedoraproject.org/en-US/Fedora/20/html/Installation_Guide/sn-making-media.html#sn-making-disc-media">follow these instructions.</a></li>
+              <li>To install Fedora using a USB stick, <a href="https://docs.fedoraproject.org/en-US/fedora/f29/install-guide/install/Preparing_for_Installation/#_writing_the_images_to_usb_media">follow these instructions.</a></li>
+              <li>To install Fedora using a blank CD or DVD, <a href="https://docs.fedoraproject.org/en-US/fedora/f29/install-guide/install/Preparing_for_Installation/#_creating_a_boot_cd_or_dvd">follow these instructions.</a></li>
             </ul>
             <div class="visible-xs text-center"><a href="#Workstation" class="btn btn-action btn-success active" role="button">Read more &raquo;</a></div>
           </div>
