--- a/getfedora.org/data/content/workstation/download/ws-download-splash.html
+++ b/getfedora.org/data/content/workstation/download/ws-download-splash.html
@@ -53,9 +53,9 @@
 	</div>
 	<div class="col-xs-12">
           <h3>${_('How do I turn the Live image into bootable media?')}</h3>
-	  <p>${Markup(_('After you download the image, you will make bootable media from it. Either &lt;a href="%s"&gt;burn the image to a blank DVD disc&lt;/a&gt;, or &lt;a href="%s"&gt;write the image to a USB flash drive&lt;/a&gt;.') % ('http://docs.fedoraproject.org/en-US/Fedora/20/html/Burning_ISO_images_to_disc/sect-Burning_ISO_images_to_disc-Burning.html', 'https://fedoraproject.org/wiki/How_to_create_and_use_Live_USB'))}</p>
+	  <p>${Markup(_('After you download the image, you will make bootable media from it. Either &lt;a href="%s"&gt;burn the image to a blank DVD disc&lt;/a&gt;, or &lt;a href="%s"&gt;write the image to a USB flash drive&lt;/a&gt;.') % ('https://docs.fedoraproject.org/en-US/fedora/f29/install-guide/install/Preparing_for_Installation/#_creating_a_boot_cd_or_dvd', 'https://fedoraproject.org/wiki/How_to_create_and_use_Live_USB'))}</p>
 	  <h3>${_('How do I boot from the media?')}</h3>
-	  <p>${Markup(_("Consult your computer system's documentation for the procedure to boot from media other than the built-in hard disk. The process may differ based on the manufacturer and model of your computer. You may find &lt;a href='%s'&gt;these common tips&lt;/a&gt; useful.") % ('http://docs.fedoraproject.org/en-US/Fedora/20/html/Burning_ISO_images_to_disc/sect-Burning_ISO_images_to_disc-Next_steps.html'))}</p>
+	  <p>${Markup(_("Consult your computer system's documentation for the procedure to boot from media other than the built-in hard disk. The process may differ based on the manufacturer and model of your computer. You may find &lt;a href='%s'&gt;these common tips&lt;/a&gt; useful.") % ('https://docs.fedoraproject.org/en-US/fedora/f29/install-guide/install/Booting_the_Installation/#sect-preparing-boot'))}</p>
 	  <xi:include href="../../../templates/generic/docs-links.html" />
         </div>
     </div>
