Add arm64 cloud base images
Signed-off-by: Patrick Uiterwijk <patrick@puiterwijk.org>

--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -325,6 +325,43 @@
             <img src="/static/images/cloud.png" />
             </div>
             <div class="col-sm-7">
+            <h3>${_('arm64 AMIs')}</h3>
+            </div>
+            <div class="col-sm-4">
+            <p class="download ec2" data-toggle="modal" data-target=".ARM64-base-EC2-desktop">${_('Click to launch')}</p>
+            <div class="modal fade ARM64-base-EC2-desktop" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog modal-cloud">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
+                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s arm64 Base Cloud AMIs')) % {'rel':global_variables.release['curr_id']}} (2018-11-28)</h4>
+                  </div>
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>${_('Region')}</th>
+                        <th class="hidden-xs">${_('AMI ID')}</th>
+                        <th class="text-center">${_('Launch')}</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr py:for="r in global_variables.EC2_regions">
+                        <td py:if="r.code in global_variables.ARM64_base_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="hidden-xs">${global_variables.ARM64_base_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.ARM64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            </div>
+          </div>
+          <div class="white">
+            <div class="col-sm-1">
+            <img src="/static/images/cloud.png" />
+            </div>
+            <div class="col-sm-7">
             <h3>${_('Standard HVM AMIs')}</h3>
             </div>
             <div class="col-sm-4">
@@ -404,6 +441,41 @@
                         <td py:if="r.code in global_variables.GP2_HVM_base_AMI">${_(r.long)}</td>
                         <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="hidden-xs">${global_variables.GP2_HVM_base_AMI[r.code]}</td>
                         <td py:if="r.code in global_variables.GP2_HVM_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.GP2_HVM_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            </div>
+        </div>
+        <div class="white">
+            <div class="col-xs-3">
+            <img src="/static/images/cloud.png" />
+            </div>
+            <div class="col-xs-9">
+            <h3>${_('arm64 AMIs')}</h3>
+            <p class="download ec2" data-toggle="modal" data-target=".ARM64-base-EC2-mobile">${_('Click to launch')}</p>
+            <div class="modal fade ARM64-base-EC2-mobile" tabindex="-1" role="dialog" aria-hidden="true">
+              <div class="modal-dialog modal-cloud">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
+                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s arm64 Base Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}} (2018-11-28)</h4>
+                  </div>
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>${_('Region')}</th>
+                        <th class="hidden-xs">${_('AMI ID')}</th>
+                        <th class="text-center">${_('Launch')}</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr py:for="r in global_variables.EC2_regions">
+                        <td py:if="r.code in global_variables.ARM64_base_AMI">${_(r.long)}</td>
+                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="hidden-xs">${global_variables.ARM64_base_AMI[r.code]}</td>
+                        <td py:if="r.code in global_variables.ARM64_base_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.ARM64_base_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
                       </tr>
                     </tbody>
                   </table>
