there is no LxQT ARM image - #922

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -225,7 +225,7 @@
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-Xfce-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
-          <div class="white">
+<!--          <div class="white">
             <div class="col-lg-1">
             <img src="/static/images/lxqt.png" />
             </div>
@@ -238,7 +238,7 @@
             <div class="col-lg-4">
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
-          </div>
+          </div> -->
           <div class="white">
             <div class="col-lg-1">
             <img src="/static/images/lxde.png" />
@@ -327,7 +327,7 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-Xfce-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/lxqt.png" />
           </div>
@@ -335,7 +335,7 @@
           <h3>${_('LXQt Desktop')}</h3>
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
-        </div>
+        </div> -->
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/lxde.png" />
@@ -414,7 +414,7 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-Xfce-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/lxqt.png" />
           </div>
@@ -424,7 +424,7 @@
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
-        </div>
+        </div> -->
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/lxde.png" />
