--- a/spins.fedoraproject.org/data/content/lxde/index.html
+++ b/spins.fedoraproject.org/data/content/lxde/index.html
@@ -159,7 +159,7 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('Specific documentation and tutorials are available at the &lt;a href="%s"&gt;LXDE project upstream website&lt;/a&gt;.') % ('http://wiki.lxde.org/en/Fedora/'))}</p>
+          <p>${Markup(_('Specific documentation and tutorials are available at the &lt;a href="%s"&gt;LXDE project upstream website&lt;/a&gt;.') % ('http://wiki.lxde.org/en/Fedora'))}</p>
         </div>
       </div>
       <div class="row top-margin">
