add genshi markup to license too

--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-xs-12">
           <h5 class="text-center" style="margin-bottom:0;"><strong><span class="fa fa-exclamation-triangle text-warning"></span> ${Markup(_('The Fedora Privacy Policy has been updated. &lt;a href="https://fedoraproject.org/wiki/Legal:PrivacyPolicy"&gt;Read the new version on the wiki.&lt;/a&gt;'))}</strong></h5>
-          <div class="text-center" style="margin-bottom:10px">Use of Fedora services is subject to these terms starting May 25, 2018.</div>
+          <div class="text-center" style="margin-bottom:10px">${_('Use of Fedora services is subject to these terms starting May 25, 2018.')}</div>
         </div>
       </div>
     </div>
