add IOT 2019 GPG key

--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -106,6 +106,7 @@
                 <li><code>CFC659B9</code> - ${_('Fedora 30')}</li>
                 <li><code>429476B4</code> - ${_('Fedora 29')}</li>
                 <li><code>9DB62FB1</code> - ${_('Fedora 28')}</li>
+                <li><code>DBBDCF7C</code> - ${_('IOT 2019')}</li>
             </ul>
             <p>${Markup(_('Finally, now that the CHECKSUM file has been verified, check that the image\'s checksum matches:'))}</p>
             <pre class="command">$ sha256sum -c *-CHECKSUM</pre>
