--- a/getfedora.org/data/content/keys/index.html
+++ b/getfedora.org/data/content/keys/index.html
@@ -85,6 +85,19 @@
 
     <div class="row">
       ${keys_for_release(
+      _('IOT'),
+      [
+          KeyInfo(
+              _('2019'),
+              '4096R/DBBDCF7C 2018-11-13',
+              'C2A3 FA9D C67F 68B9 8BB5  43F4 7BB9 0722 DBBD CF7C',
+              ['Fedora (iot 2019) &lt;fedora-iot-2019@fedoraproject.org&gt;'],
+              None,
+              [('https://getfedora.org/static/DBBDCF7C.txt', 'Fedora Project')
+              ])
+      ])}
+
+      ${keys_for_release(
       _('EPEL 7'),
       [
           KeyInfo(
