--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -71,7 +71,7 @@
           <p>${Markup(_('Fedora Workstation is provided via Fedora Media Writer. Download this program for your &lt;a href="%s"&gt;supported platform&lt;/a&gt; and follow the prompts to generate a live version (see \'What does "Live" mean?\' to the right) of Fedora Workstation on a USB flash drive. You may then run the live version of Fedora Workstation from your USB flash drive.') % ('#fmw'))}</p>
           <p>${_('Optionally, you may install Fedora Workstation to a laptop or desktop computer that has at least 1 GHz processor, 1 GB RAM, and 10 GB space available. To do this, run the live version of Fedora Workstation from your USB flash drive on the computer you\'d like to install to, run the Fedora Media Writer application, and follow the on-screen prompts to complete installation.')}</p>
 
-          <h3>${_('Supported Platforms')}</h3>
+          <h3 id="fmw">${_('Supported Platforms')}</h3>
           <p>${_('Fedora Media Writer supports the following platforms:')}</p>
           <ul>
               <li>${_('Mac OS X')}</li>
@@ -88,7 +88,7 @@
               <p>${Markup(_('We have auto-detected that you are running &lt;strong&gt;Windows&lt;/strong&gt; and have offered that version for download. If we have detected your operating system incorrectly or you would like to download a different version, please click the "View all platform downloads" button below.'))}</p>
           </div>
 
-          <div id="fmw">
+          <div>
           <a href="#" id="openstack-base-click" class="btn btn-success" role="button">${_('View all platform downloads')}</a>
           <div id="openstack-base-link" class="reveal" style="display: none;">
             <div class="row top-margin">
